--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^5.2.1",
     "googleapis": "^171.4.0",
     "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.2.2",
     "zod": "^4.3.6"
   }
 }
