--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT=3000
 GOOGLE_SHEET_ID=
 GOOGLE_SERVICE_ACCOUNT_KEY=
-MONGODB_URI=mongodb://127.0.0.1:27017/health-tracker
+MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/health-tracker?appName=<appname>
