--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PORT=3000
-GOOGLE_SHEET_ID=
+PORT=3000 #default Port no.
+GOOGLE_SHEET_ID= Your Google sheet_ID
 GOOGLE_SERVICE_ACCOUNT_KEY=
 MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/health-tracker?appName=<appname>
